--- a/_includes/merchant_link.html
+++ b/_includes/merchant_link.html
@@ -3,5 +3,5 @@
   <div class="merchant-image-container">
     <img src="/images/{{ merchant.logo }}" width="300" height="300" class="merchant-image">
   </div>
-  <button class="merchant-button">View Argos Black Friday deals <i class="fa fa-external-link" aria-hidden="true"></i></button>
+  <button class="merchant-button">View deals <i class="fa fa-external-link" aria-hidden="true"></i></button>
 </a>
